<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Names -->
    <string name="app_name">Last Straw</string>

    <!-- Button Names -->
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">CANCEL</string>
    <string name="buttonWait">Please Wait..</string>

    <!-- Random TextViews -->
    <string name="playCardConfirmTitle">Play This Card?</string>
    <string name="tvDefault">TextView</string>
    <string name="lvlSelectTitle">Select Level</string>
    <string name="confirmdialogErrorTitle">Error Message</string>
    <string name="confirmdialogSuccessTitle">Success Message</string>
    <string name="cardsinhand">Cards In Hand:</string>
    <string name="cardsinhandNR"></string>
    <string name="playerDebuffTitle">Player Debuff</string>
    <string name="enemyDebuffTitle">Enemy Debuff</string>
    <string name="cardsRemaining">Remaining: </string>
    <string name="score">Score: </string>
    <string name="exp">Exp</string>
    <string name="gameOver">GAME FINISHED!</string>
    <string name="finalScore">Final Score</string>
    <string name="expGainTitle">You gained:</string>
    <string name="close">CLOSE</string>

    <!-- Level Numbers -->
    <string name="lvl000">0</string>
    <string name="lvl001">1</string>
    <string name="lvl002">2</string>
    <string name="lvl003">3</string>
    <string name="lvl004">4</string>
    <string name="lvl005">5</string>
    <string name="lvl006">6</string>
    <string name="lvl007">7</string>
    <string name="lvl008">8</string>

    <!-- Profile Screen Activity -->
    <string name="backButton">BACK</string>
    <string name="nameTitle">NAME: </string>
    <string name="saveInfo">UPDATE</string>
    <string name="genderTitle">GENDER: </string>
    <string name="selectGender">SELECT</string>
    <string name="expProgressTitle">EXP</string>
    <string name="levelTitle">LEVEL</string>
    <string name="genderSelectionTitle">SELECT GENDER</string>
    <string name="refreshTip">(Refreshes on update)</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>

    <!-- Start Screen Activity -->
    <string name="playButton">PLAY</string>
    <string name="profileButton">PROFILE</string>
    <string name="cardStoreButton">CARDS</string>
    <string name="rulesButton">GAME RULES</string>
    <string name="newCards">New cards available!</string>

    <!-- World Selection Activity -->
    <string name="worldSelectTitle">World Selection</string>
    <string name="world_unknown">\?????</string>
    <string name="world_toolShed">Tool Shed</string>
    <string name="world_fields">Fields</string>

    <!-- Level Selection Activity -->
    <string name="highscore">High Score: </string>
    <string name="highscoreNr">0</string>
    <string name="world001_lv001_enemy_name">Farmhand Joe</string>
    <string name="world001_lv002_enemy_name">Farmhand Graham</string>
    <string name="world001_lv003_enemy_name">Farmhand Hurwitz</string>
    <string name="world001_lv004_enemy_name">Farmhand Daryl</string>
    <string name="world001_lv005_enemy_name">Farmhand Chambers</string>
    <string name="world001_lv006_enemy_name">Farmhand Kaplan</string>
    <string name="world001_lv007_enemy_name">Farmhand Wesley</string>
    <string name="world001_lv008_enemy_name">Farmboss Oakley</string>

    <!-- Card Selection Activity -->
    <string name="cardSelectTitle">Available Cards</string>
    <string name="cardsInHand">Cards In Your Hand</string>
    <string name="startGame">Start Game!</string>
    <string name="viewCards">View Hand</string>
    <string name="goBack">Back</string>
    <string name="selectCardConfirmTitle">Use This Card?</string>
    <string name="cardAdded">Card Added To Hand</string>
    <string name="removeHandCardTitle">Remove This Card?</string>
    <string name="emptyHand">Empty Hand</string>

    <!-- Cards Activity -->
    <string name="cardsListTitle">Cards</string>

    <!-- Rules Activity -->
    <string name="rules_h1">General Rules</string>
    <string name="rules_h2">Cards</string>
    <string name="rules_h3">Additional Information</string>
    <string name="rules_p1">        Last Straw is a strategic one versus one battle between
        you and a computer controlled enemy. The main objective
        is to accumulate the most points but also to avoid clearing
        the last object. The game is turn based and each turn you
        get a set number of moves. Each move you can either clear
        an object or play a card. Whoever clears the last object
        and ends the game receives a point penalty, so think
        through your last couple of turns carefully.</string>
    <string name="rules_p3">        The player and the enemy also has access to cards which
        can be used to affect the game. There are three different
        categories of cards. Continue to the next page to learn how
        to acquire cards, how to use cards, what they can do and see examples.</string>
    <string name="page_1">1/3</string>
    <string name="page_2">2/3</string>
    <string name="page_3">3/3</string>
    <string name="nextP">Next</string>
    <string name="prevP">Previous</string>
    <string name="rules_p4">There are three different types of cards:</string>
    <string name="rules_p5">- Field</string>
    <string name="rules_p6">- Ailment</string>
    <string name="rules_p7">- Boosting</string>
    <string name="rules_p8">Field cards affect the board somehow. For example, you can
    use a field card to restore cleared objects. Ailment cards are cards that affect
    the opponent, such as slowing them down or make them miss when they try to clear
    objects. Boosting cards affects the user of the card in a positive way. For example,
    you could gain a point or move boost.</string>
    <string name="rules_p9">You start with only 1 card in your arsenal. However, as you
    gain levels, you gain access to new cards. You can have a total of 6 cards in your
    hand while playing, but you start out with 1 available slot.</string>
    <string name="rules_p010">Additional slots are awarded from achieving victories
    against more difficult enemies. You can preview all unlockable cards per card type
    from the main menu if you hit the "Cards" button.</string>
    <string name="rules_p011">In Last Straw, you will venture through different worlds. These
    worlds consists of 10 levels. In order to progress, you have to beat each level at least one
    time. You may play the same level multiple times, however you gain less experience the
    higher level you are in comparison to the world level-range.</string>
    <string name="rules_p012">Finally, high score works like this: Every level has its own
    high score. These all add up to make a world total score. Eventually, when you\'ve cleared
    multiple worlds, all scores adds up to an account high score.</string>

    <!-- Player Commands -->
    <string name="commandButton">Action</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
