<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_world001">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvlSelectTitle"
        android:id="@+id/tvNameTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textBlack"
        android:textSize="24sp"
        android:padding="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl001"
                android:id="@+id/bWorld001Lvl001"
                style="@style/lvlSelectionButton"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl002"
                android:id="@+id/bWorld001Lvl002"
                style="@style/lvlSelectionButton"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl003"
                android:id="@+id/bWorld001Lvl003"
                style="@style/lvlSelectionButton"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp"
                android:enabled="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl004"
                android:id="@+id/bWorld001Lvl004"
                android:layout_gravity="center_horizontal"
                style="@style/lvlSelectionButton"
                android:textSize="40sp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl005"
                android:id="@+id/bWorld001Lvl005"
                android:layout_gravity="center_horizontal"
                style="@style/lvlSelectionButton"
                android:textSize="40sp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <Button
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:text="@string/lvl006"
                android:id="@+id/bWorld001Lvl006"
                android:layout_gravity="center_horizontal"
                style="@style/lvlSelectionButton"
                android:textSize="40sp"
                android:enabled="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>