<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_world001">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/goBack"
            android:id="@+id/bGoBack"
            android:textColor="@color/textBlack"
            style="@style/startscreen_button" />

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyHand"
            android:id="@+id/bEmptyHand"
            style="@style/startscreen_button"
            android:layout_marginLeft="10dp"
            android:textColor="@color/textBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardsInHand"
            android:id="@+id/tvRemoveCardName"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textBlack"
            android:textSize="24sp"
            android:padding="16dp" />

        <ListView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:id="@+id/handList"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>