<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="@drawable/confirm_box"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeHandCardTitle"
        android:id="@+id/tvError"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textBlack"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Card Name"
        android:id="@+id/tvRemoveCardName"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textBlack" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <Button
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonOk"
            android:id="@+id/bConfirmOk"
            style="@style/startscreen_button"
            android:layout_below="@+id/tvError"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/textBlack" />

        <Button
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:id="@+id/bConfirmCancel"
            android:layout_toEndOf="@+id/bConfirmOk"
            style="@style/startscreen_button"
            android:layout_below="@+id/tvError"
            android:layout_toRightOf="@+id/bConfirmOk"
            android:textColor="@color/textBlack" />
    </LinearLayout>

</LinearLayout>