<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_world001"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROFILE"
        android:id="@+id/tvNavTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textBlack"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/etName"
            android:background="@drawable/startscreen_btncolor"
            android:textSize="20sp"
            android:maxLines="1"
            android:maxLength="10"
            android:textStyle="bold"
            android:imeOptions="flagNoExtractUi"
            android:paddingLeft="8dp" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/ivImg"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/portrait_placeholder_boy"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvGender"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/textBlack"
            android:textSize="20sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/genderSelectionTitle"
            android:id="@+id/bSelectGender"
            android:layout_marginTop="8dp"
            android:background="@drawable/startscreen_btncolor"
            android:textStyle="bold" />

    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelTitle"
                android:id="@+id/tvLevelLabel"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textBlack"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lvl000"
                android:id="@+id/tvLevelNumber"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp"
                android:textColor="@color/textBlack" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/expBar"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/customprogressbar" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp">

                <Button
                    android:layout_width="128dp"
                    android:layout_height="50dp"
                    android:text="@string/saveInfo"
                    android:id="@+id/bSave"
                    android:background="@drawable/lvlselection_button"
                    android:textStyle="bold"
                    android:layout_marginRight="3dp" />

                <Button
                    android:layout_width="128dp"
                    android:layout_height="50dp"
                    android:text="@string/backButton"
                    android:id="@+id/bBack"
                    android:background="@drawable/startscreen_btncolor"
                    android:textStyle="bold"
                    android:layout_marginLeft="3dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>